# JQR

./: .gitignore  README.md
JQR-main/assets/: README.md
JQR-main/ros2_ws/src/py01_topic/py01_topic/: testsync1.py
JQR-main/ros2_ws/src/unitree_control/unitree_control/: motor_bridge_float64.py
JQR-main/ros2_ws/src/waistcar_control/: package.xml
JQR-main/ros2_ws/src/waistcar_control/scripts/: jump_traj.csv
JQR-main/ros2_ws/src/waistcar_control/src/: ct_lqr.h  data_logger.cpp  data_logger.h  lidar_serial_node.cpp  lowpassfilter.h  lqr_inst.h  motor_control_node.cpp  waistcar_control_node.cpp
JQR-main/ros2_ws/src/waistcar_msgs/: CMakeLists.txt
JQR-main/ros2_ws/src/waistcar_msgs/msg/: ModeCommandMsg.msg  (+2 more)
JQR-main/simulators/matlab/: model.mlx
data/: figure_plot.m  readme.txt  waistcar_control_20250708-191350.txt  waistcar_control_20250709-155731.txt  waistcar_control_20250805-124948.txt  waistcar_control_20250805-130453.txt  waistcar_control_20250807-080900.txt  waistcar_control_20250807-081124.txt
docs/: hardware.md
ros2_ws/src/py01_topic/: package.xml  setup.py
ros2_ws/src/py01_topic/py01_topic/: CANedsGoldV002.eds  canopen_motor_node.py  testsyncnoderemote.py
ros2_ws/src/unitree_control/: package.xml  setup.py
ros2_ws/src/waistcar_control/: CMakeLists.txt
ros2_ws/src/waistcar_control/include/ct/core/plot/: matplotlibcpp.h
ros2_ws/src/waistcar_control/include/ct/optcon/lqr/: LQR.hpp
ros2_ws/src/waistcar_control/include/ct/optcon/lqr/riccati/: CARE-impl.hpp
ros2_ws/src/waistcar_control/launch/: waistcar_launch.xml
ros2_ws/src/waistcar_control/scripts/: jump_traj_plan.py  motor_bridge_float64.py  remote_controller_listener.py
ros2_ws/src/waistcar_control/scripts/traj_planning/: cmd  traj_jump_high_mat2txt.py
ros2_ws/src/waistcar_control/src/: car_jump.cpp  car_jump.h  control_utils.h  data_receive.cpp  imu_read_node.cpp  lqr_inst.cpp  motor_command_node.cpp  remoter_read_node.cpp  utils.h
ros2_ws/src/waistcar_msgs/: package.xml
ros2_ws/src/waistcar_msgs/msg/: ImuMsg.msg  MotorCommandMsg.msg  RemoteMsg.msg#by_16ch
simulators/matlab/: model_simplify.mlx
simulators/mujoco/: bike_model.py  ecbc_toolbox.py  waistcar_control.py  waistcar_control_ecbc.py  waistcar_control_sin.py
simulators/mujoco/model/: scene.xml  scene_ramp.xml  waist_car.xml
simulators/mujoco/model/meshes/: front wheel.STL  rear wheel.STL
simulators/webots/controllers/waistcar_jump_cpp/: Makefile  car_jump.cpp  car_jump.h  ct_lqr.h  utils.h  waistcar_jump_cpp.cpp
simulators/webots/worlds/: .waist car.wbproj  waist car.wbt
(+8 files in other folders)
